--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <p>"Front-end developer and avid reader."</p>
       </div>
       <div class="links-container">
-        <a class="links-btn">GitHub</a>
-        <a class="links-btn">Frontend Mentor</a>
-        <a class="links-btn">LinkedIn</a>
-        <a class="links-btn">Twitter</a>
-        <a class="links-btn">Instagram</a>
+        <a href="#" class="links-btn">GitHub</a>
+        <a href="#" class="links-btn">Frontend Mentor</a>
+        <a href="#" class="links-btn">LinkedIn</a>
+        <a href="#" class="links-btn">Twitter</a>
+        <a href="#" class="links-btn">Instagram</a>
       </div>
     </div>
 
